--- a/src/KingdomCraft/KingdomCraft/KingdomCraft.vcxproj.filters
+++ b/src/KingdomCraft/KingdomCraft/KingdomCraft.vcxproj.filters
@@ -274,6 +274,15 @@
     <ClCompile Include="Main\SceneManager\SceneBase\GameScene\EventManager\EventListener\GameEventListener\GameEventListener.cpp">
       <Filter>Main\SceneManager\SceneBase\GameScene\EventManager\EventListener\GameEventListener</Filter>
     </ClCompile>
+    <ClCompile Include="Main\SceneManager\SceneBase\GameScene\ObjectManager\GamaObjectManager\HouseManager\HouseCreater\HouseCreater.cpp">
+      <Filter>Main\SceneManager\SceneBase\GameScene\ObjectManager\GameObjectManager\HouseManager\HouseCreater</Filter>
+    </ClCompile>
+    <ClCompile Include="Main\SceneManager\SceneBase\GameScene\ObjectManager\GamaObjectManager\HouseManager\HouseBase\NormalHouse\NormalHouse.cpp">
+      <Filter>Main\SceneManager\SceneBase\GameScene\ObjectManager\GameObjectManager\HouseManager\HouseBase\NormalHouse</Filter>
+    </ClCompile>
+    <ClCompile Include="Main\SceneManager\SceneBase\GameScene\ObjectManager\GamaObjectManager\HouseManager\HouseBase\HouseBase.cpp">
+      <Filter>Main\SceneManager\SceneBase\GameScene\ObjectManager\GameObjectManager\HouseManager\HouseBase</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Main\SceneManager\SceneManager.h">
@@ -545,6 +554,15 @@
     </ClInclude>
     <ClInclude Include="Main\SceneManager\SceneBase\GameScene\EventManager\EventListener\GameEventListener\GameEventListener.h">
       <Filter>Main\SceneManager\SceneBase\GameScene\EventManager\EventListener\GameEventListener</Filter>
+    </ClInclude>
+    <ClInclude Include="Main\SceneManager\SceneBase\GameScene\ObjectManager\GamaObjectManager\HouseManager\HouseCreater\HouseCreater.h">
+      <Filter>Main\SceneManager\SceneBase\GameScene\ObjectManager\GameObjectManager\HouseManager\HouseCreater</Filter>
+    </ClInclude>
+    <ClInclude Include="Main\SceneManager\SceneBase\GameScene\ObjectManager\GamaObjectManager\HouseManager\HouseBase\NormalHouse\NormalHouse.h">
+      <Filter>Main\SceneManager\SceneBase\GameScene\ObjectManager\GameObjectManager\HouseManager\HouseBase\NormalHouse</Filter>
+    </ClInclude>
+    <ClInclude Include="Main\SceneManager\SceneBase\GameScene\ObjectManager\GamaObjectManager\HouseManager\HouseBase\HouseBase.h">
+      <Filter>Main\SceneManager\SceneBase\GameScene\ObjectManager\GameObjectManager\HouseManager\HouseBase</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -848,6 +866,18 @@
     <Filter Include="Main\SceneManager\SceneBase\GameScene\EventManager\EventListener\GameEventListener">
       <UniqueIdentifier>{b35d68fd-f0e1-495b-93f8-a4027cc68a4e}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Main\SceneManager\SceneBase\GameScene\ObjectManager\GameObjectManager\HouseManager\HouseCreater">
+      <UniqueIdentifier>{b379c236-5774-4c4e-9513-65e01e61ce00}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Main\SceneManager\SceneBase\GameScene\ObjectManager\GameObjectManager\HouseManager\HouseBase">
+      <UniqueIdentifier>{539edbd8-218a-44c5-a45f-6d985199d2c2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Main\SceneManager\SceneBase\GameScene\ObjectManager\GameObjectManager\HouseManager\HouseBase\NormalHouse">
+      <UniqueIdentifier>{5c040d33-b02b-4661-a795-b8b00b4c2c3d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Main\SceneManager\SceneBase\GameScene\ObjectManager\GameObjectManager\HouseManager\HouseBase\NormalHouse\Effect">
+      <UniqueIdentifier>{ca149e33-5075-45a1-baf3-fa2033fd7a7f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Library\DebugFont\Effect\DebugFont.fx">
@@ -864,6 +894,9 @@
     </FxCompile>
     <FxCompile Include="Resource\Effect\GameScene\Sky.fx">
       <Filter>Main\SceneManager\SceneBase\GameScene\ObjectManager\GameObjectManager\FieldManager\Sky\Effect</Filter>
+    </FxCompile>
+    <FxCompile Include="Resource\Effect\GameScene\NormalHouse.fx">
+      <Filter>Main\SceneManager\SceneBase\GameScene\ObjectManager\GameObjectManager\HouseManager\HouseBase\NormalHouse\Effect</Filter>
     </FxCompile>
   </ItemGroup>
 </Project>
